<resources>
    <string name="app_name">My Application</string>
    <string name="quiztador">Quiztador</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="orSignup">or signup</string>
    <string name="register">Register</string>
    <string name="alreadyHaveAccount">Already have an account? Login</string>
</resources>
