<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.robo.login.MainActivity">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/tid33797_mountain_001_hero" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="252dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:drawableLeft="@drawable/ic_account_circle_white_48dp"
        android:hint="@string/username"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/pswInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userInput"
        android:layout_centerInParent="true"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:drawableLeft="@drawable/ic_lock_white_48dp"
        android:hint="@string/password"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pswInput"
        android:layout_centerInParent="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSwitchToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/no_background_button"
        android:text="@string/alreadyHaveAccount"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>
